# Versioned-data-structures

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: Ubuntu-CI.yaml  Windows-CI.yaml
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/version-data-structures/: CMakeLists.txt
lib/version-data-structures/include/: HashSet.h  HelloWorld.h  QueueThreadController.h  StackHistory.h  StackState.h  StackThreadController.h  VersionedQueue.h  VersionedSet.h  VersionedStack.h  VersionedTree.h  VersionedTreeNode.h
lib/version-data-structures/src/: HelloWorld.cpp  VersionedTree.cpp
tests/: CMakeLists.txt
tests/test-cases/: CMakeLists.txt  HashSetTest.cpp  HelloWorldTest.cpp  StackHistoryTest.cpp  VersionedQueueTest.cpp  VersionedSetTest.cpp  VersionedStackTest.cpp  VersionedTreeNodeTest.cpp  VersionedTreeTest.cpp
